Fix footer being scrolled out of view

--- a/client/styles/strider.less
+++ b/client/styles/strider.less
@@ -427,7 +427,6 @@ img.manual_setup {
 footer {
   border-top:1px solid #ddd;
   background-color:#f0f0f0;
-  margin-top:30px;
   padding:10px;
 }
 
@@ -654,6 +653,8 @@ hero-vsub-unit label {
 @media (min-width: 980px) {
   body .wrap {
     padding-top: 50px;
+    padding-bottom: 51px;
+    margin-bottom: -51px;
   }
 
   .nav-collapse {
@@ -665,7 +666,8 @@ hero-vsub-unit label {
   body .wrap {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding-bottom: 20px;
+    padding-bottom: 51px;
+    margin-bottom: -51px;
   }
 
   footer p {
